@@ -1,5 +1,5 @@
 APACHE 2.0 STATUS:						-*-text-*-
-Last modified at [$Date: 2001/01/26 02:27:03 $]
+Last modified at [$Date: 2001/01/26 17:54:03 $]
 
 Release:
 
@@ -29,10 +29,6 @@ RELEASE SHOWSTOPPERS:
     * Root all file systems with <Directory /> for WIN32/OS2/NW permissions 
         Status: patch brought forward from 1.3.14
                 WIN32 and OS2 need review [William Rowe, Brian Harvard]
-
-    * Error messages are filtered according to the needs of the original 
-      URI.  Nothing ensures that they are translated on EBCDIC machines
-      and *not* translated on ASCII machines.
 
     * Win32: Enable the Windows MPM to honor max_requests_per_child
         Status: FirstBill will fix this?
