@@ -3419,7 +3419,25 @@ static const char *get_canned_error_string(int status,
 	  */
 	}
 }
-	
+
+static void reset_filters(request_rec *r)
+{
+    ap_filter_t *f = r->output_filters;
+
+    while (f) {
+        if (!strcasecmp(f->frec->name, "CORE") ||
+            !strcasecmp(f->frec->name, "CONTENT_LENGTH") ||
+            !strcasecmp(f->frec->name, "HTTP_HEADER")) {
+            f = f->next;
+            continue;
+        }
+        else {
+            f = f->next;
+            ap_remove_output_filter(f);
+        }
+    }
+}
+
 /* We should have named this send_canned_response, since it is used for any
  * response that can be generated by the server from the request record.
  * This includes all 204 (no content), 3xx (redirect), 4xx (client error),
@@ -3437,6 +3455,7 @@ AP_DECLARE(void) ap_send_error_response(request_rec *r, int recursive_error)
      * this value.
      */
     r->eos_sent = 0;
+    reset_filters(r);
 
     /*
      * It's possible that the Location field might be in r->err_headers_out
